# pico-ads1115

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  justfile
docs/: CHANGELOG.md  README.md  i2c-interface.md  overview.md  pinout.md  programming-guide.md  registers.md  specifications.md
examples/basic_adc/: CMakeLists.txt  basic_adc.cpp
include/ads1115/: ads1115.hpp  ads1115_config.hpp  ads1115_registers.hpp  ads1115_types.hpp
scripts/: setup-clangd.sh
src/: ads1115.cpp
